--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mui/material": "^5.15.18",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@smastrom/react-rating": "^1.5.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
